--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body{
 	font-size: 20px;
 	font-weight: 600;
 	font-family: "Noto Sans", sans-serif;
-	top: 70%;
+	top: 75%;
 	left: 1.5%;
 	background-color: #0a0a0a;
 	border: 3px solid #262626;
@@ -177,8 +177,9 @@ iframe {
 }
 
 .report {
+	position: relative;
 	width: 100%;
-	height: 1000px;
+	height: 100%;
 	display: grid;
 	grid-template-columns: 1fr 2fr;
 	background-color: #090909;
@@ -217,8 +218,7 @@ iframe {
 
 .report-right {
 	display: grid;
-	grid-template-rows: 1fr 1fr;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr;
 	height: 100%;
 }
 
@@ -228,6 +228,8 @@ iframe {
 	font-family: 'Raleway', sans-serif;
 	display: flex;
 	flex-direction: column;
+	width: 100%;
+	height: 100%;
 }
 
 .report-choice h3 {
@@ -301,6 +303,7 @@ iframe {
 }
 
 .report2 {
+	position: relative;
 	width: 100%;
 	height: 600px;
 	display: grid;
